--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "three.meshline",
-  "version": "1.3.0",
-  "description": "Mesh replacement for THREE.Line",
+  "name": "@rivertam/three.meshline",
+  "version": "1.5.0",
+  "description": "Mesh replacement for THREE.Line (fork with some fixes)",
   "main": "src/THREE.MeshLine.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
